SIP - Scilab Image Processing Toolbox
Copyright (C) 2002-2012 Ricardo Fabbri
__________________________________________________________________

0.7.1
	+ new sip_exec utility to exec script anywhere on PATH
	+ updated help files to contain illustrating figures (bwdist and skel)
	+ new sip_init.sce startup script for SIP containing useful aliases, etc.

0.7.0
	+ new extras/ directory with code for specific practical problems. the biospot
	subdir contains some experimental code to do drosophila melanogaster embryo
	and nucleii segmentation
	+ new arclength function

0.6.0
	+ opencv support - new canny edge detection function

0.5.9

	+ new function imhist for plotting and computing histograms taylored for
	images
	+ new function color_classify for color recognition

0.5.6

	+ fixed help building for systems returning non-en_US in getlanguage(), 
	bug #3393248
	+ fixed help links to scilab functions external to SIP.

0.5.4
	+ works with Scilab Git master branch
	+ minor improvements to demos
	+ help updated to build with Scilab 5.3 Git branch. Many fixes and updates to the
	help files. Made many examples run, updating the syntax.
	+ included ATOMS files

0.5.2
	+ SIP compiles and loads cleanly with Scilab 5.3 that comes with Ubuntu 11.04
	+ SIP intro and mogrify demos run smoothly in Scilab 5.3
	+ fixed StringToDouble symbol not defined due to seemingly boken ImageMagick
	shared libraries in Ubuntu 11.04. mogrify -fuzz parameter for image
	segmentation will not work in these broken systems.
	+ added a tests/ subdir to link against libsip and identify link-time errors
	without having to load into scilab.
	+ removed small warnings issued by configure

0.5.1
	+ migrated to Git

0.5.0
	+ new function KRC_from_P for decomposing a camera matrix P into intrinsic
	parameters K, rotation R, and camera center C.
	+ new function sip_rq for RQ decomposition (the reverse of qr).
	+ new functions to convert between rotation matrices, quaternions, and