@@ -1,0 +1,6 @@
+function myclf()
+  if SIPVIEWER == 'sci'
+    figure
+    clf
+  end
+endfunction
