@@ -6,6 +6,7 @@ __________________________________________________________________
 	+ new sip_exec utility to exec script anywhere on PATH
 	+ updated help files to contain illustrating figures (bwdist and skel)
 	+ new sip_init.sce startup script for SIP containing useful aliases, etc.
+	+ new imshow option to use external viewer
 
 0.7.0
 	+ new extras/ directory with code for specific practical problems. the biospot
